RESOLVED FIXED163431
test262: Failure with RegExp.prototype.compile when pattern is undefined
https://bugs.webkit.org/show_bug.cgi?id=163431
Summary test262: Failure with RegExp.prototype.compile when pattern is undefined
Joseph Pecoraro
Reported 2016-10-14 00:33:08 PDT
test262: Failure with RegExp.prototype.compile when pattern is undefined regexp.compile(undefined) should be the same as regexp.compile("") Currently we treat it like regexp.compile("undefined") > esid: sec-regexp.prototype.compile > es6id: B.2.5.1 > description: Behavior when pattern is undefined > info: | > [...] > 3. If Type(pattern) is Object and pattern has a [[RegExpMatcher]] internal > slot, then > [...] > 4. Else, > a. Let P be pattern. > b. Let F be flags. > 5. Return ? RegExpInitialize(O, P, F). > > 21.2.3.2.2 Runtime Semantics: RegExpInitialize > > 1. If pattern is undefined, let P be the empty String. > [...]
Attachments
[PATCH] Proposed Fix (5.62 KB, patch)
2016-10-14 00:36 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-10-14 00:36:48 PDT
Created attachment 291585 [details] [PATCH] Proposed Fix
Yusuke Suzuki
Comment 2 2016-10-14 00:42:39 PDT
Comment on attachment 291585 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 3 2016-10-14 03:07:20 PDT
Comment on attachment 291585 [details] [PATCH] Proposed Fix Clearing flags on attachment: 291585 Committed r207334: <http://trac.webkit.org/changeset/207334>
WebKit Commit Bot
Comment 4 2016-10-14 03:07:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.