test262: Failure with RegExp.prototype.compile when pattern is undefined https://bugs.webkit.org/show_bug.cgi?id=163431

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-10-14
Reviewed by Yusuke Suzuki.

JSTests:

* test262.yaml:

Source/JavaScriptCore:

If pattern is undefined let P be the empty String.
https://tc39.github.io/ecma262/#sec-regexpinitialize

* runtime/RegExpPrototype.cpp:
(JSC::regExpProtoFuncCompile):

LayoutTests:

* js/regexp-compile-expected.txt:
* js/script-tests/regexp-compile.js:

Canonical link: https://commits.webkit.org/181253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207334 268f45cc-cd09-0410-ab3c-d52691b4dbfc