LayoutTests/js/script-tests/regexp-compile.js
@@ -31,14 +31,15 @@ shouldBe("re.toString()", "'/c/i'");
 
 shouldThrow("re.compile(new RegExp('+'));");
 
+re.compile();
+shouldBe("re.toString()", "'/(?:)/'");
 re.compile(undefined);
-shouldBe("re.toString()", "'/undefined/'");
+shouldBe("re.toString()", "'/(?:)/'");
+re.compile("");
+shouldBe("re.toString()", "'/(?:)/'");
 
 re.compile(null);
 shouldBe("re.toString()", "'/null/'");
-
-re.compile();
-shouldBe("re.toString()", "'/(?:)/'");
 
 re.compile("z", undefined);
 shouldBe("re.toString()", "'/z/'");
